# idx-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-23-market-bar-multi-portfolio-design.md
src/: app.rs  config.rs  lib.rs  main.rs  ui.rs
src/api/: mod.rs  news.rs  yahoo.rs
src/app/: alerts.rs  bookmarks.rs  export.rs  filter.rs  mod.rs  news.rs  portfolio.rs  sort.rs  watchlist.rs
src/ui/: bookmark_detail.rs  bookmarks.rs  detail.rs  formatters.rs  mod.rs  modals.rs  news.rs  news_detail.rs  tables.rs
tests/: app_alerts.rs  app_bookmarks.rs  app_core.rs  app_filter.rs  app_sort.rs  config.rs  formatters.rs
tests/common/: mod.rs
